parslers-benchmark/src/tests/invalid/syntaxErr/function/functionNoReturn.wacc
# function body missing return or exit statement
# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
    bool b = true 
  end

  int x = call f();
  println x
end
	
